# etheos

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md  admin.ini  azure-pipelines-ci.yml  azure-pipelines-deploy-test.yml  azure-pipelines.yml  build-linux.sh  build-windows.ps1  butil  install.sql  install_sqlserver.sql
.github/workflows/: build.yaml  ci.yaml
.pipelines/: azure-pipelines-ci.yml  azure-pipelines-deploy-test.yml  azure-pipelines.yml
.pipelines/release/scripts/: 00_load_image.sh  01_copy_configs.sh  02_get_data.sh  03_delete_existing.sh  04_backup_logs.sh  05_setup_dbpass.sh  06_deploy_container.sh
cmake/: DownloadBcrypt.cmake  DownloadGoogleTest.cmake  DownloadIXWebSocket.cmake  FindMariaDB.cmake  SourceFileList.cmake  bcryptproj.cmake  gtestproj.cmake  ixwebsocketproj.cmake
config/: console.ini  database.ini  extra.ini  files.ini  misc.ini  server.ini  sln.ini
config/database/: mysql.ini  sqlserver.ini
data/: formulas.ini  home.ini  pets.ini  speech.ini
data/pub/: empty.ecf  empty.eif  empty.enf  empty.esf
data/quests/: .gitignore
deploy/: ci-test.sh  deploy.sh  etheos-ci-test.json  etheos-container.json  etheos-dev.tmpl.json  params-ci-test.json  params-dev.json  params-test.json  test-connection.py
deploy/namespaces/: ci-test.yaml  dev.yaml  public-prod.yaml  public-test.yaml
lang/: en.ini
project/: linux.cbp  mingw.cbp
scripts/: install-deps.ps1  install-deps.sh
src/: character.cpp  character.hpp  config.cpp  config.hpp  console.cpp  console.hpp  database.cpp  database.hpp  database_impl.hpp  dialog.hpp  eoclient.cpp  eoclient.hpp  eodata.cpp  eodata.hpp  eoserv_config.cpp  eoserv_windows.h  eoserver.cpp  eoserver.hpp  guild.cpp  guild.hpp  hash.cpp  hash.hpp  hashupdater.cpp  hashupdater.hpp  loginmanager.cpp  loginmanager.hpp  main.cpp  map.cpp  map.hpp  map2.cpp  nanohttp.cpp  npc.cpp  npc.hpp  npc_data.cpp  npc_data.hpp  packet.cpp  packet.hpp  party.cpp  player.cpp  player.hpp  (+18 more)
src/commands/: admin.cpp  char_mod.cpp  debug.cpp  info.cpp  server.cpp
src/eoplus/: lex.cpp
src/extra/: seose_compat.cpp
src/fwd/: character.hpp  console.hpp  database.hpp  packet.hpp  player.hpp  socket.hpp  wedding.hpp  world.hpp  wsclient.hpp  wsserver.hpp
src/handlers/: Account.cpp  Board.cpp  Character.cpp  Chest.cpp  Citizen.cpp  Connection.cpp  Guild.cpp  Init.cpp  Item.cpp  Jukebox.cpp  Locker.cpp  Login.cpp  Marriage.cpp  Priest.cpp  Quest.cpp  Shop.cpp  Talk.cpp  Trade.cpp  Warp.cpp  Welcome.cpp
src/player_commands/: player_commands.cpp  player_commands.hpp  stat.cpp
src/test/: config_test.cpp  database_test.cpp  worlddump_test.cpp
src/test/handlers/: Login_test.cpp
src/test/integration/: change_passwords.eob  create_accounts.eob  create_delete_char.eob  double_login.eob  login_queue_busy.eob
src/test/testhelper/: mocks.hpp  setup.hpp
src/test/util/: semaphore_test.cpp  threadpool_test.cpp
src/util/: async.cpp  async.hpp  semaphore.cpp  semaphore.hpp  threadpool.cpp  threadpool.hpp  variant.cpp
tu/: commands.cpp  game_1.cpp  game_2.cpp  handlers.cpp  system.cpp
upgrade/: 0.7.0_to_0.7.1.sql  0.7.0_to_0.7.1_sqlserver.sql
